	  device/lib/z80/modmixed.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80n/abs.s,
	  device/lib/z80n/divmixed.s,
	  device/lib/z80n/divsigned.s,
	  device/lib/z80n/divunsigned.s,
	  device/lib/z80n/modmixed.s,
	  device/lib/z80n/modsigned.s,
	  device/lib/z80n/modunsigned.s,
	  device/lib/z80n/mul.s,
	  device/lib/z80n/mulchar.s,
	  device/lib/z80n/setjmp.s,
	  device/lib/z80n/strcpy.s,
	  device/lib/z80n/strlen.s:
	  Fix z180, z80n library functions for new calling convention.

2021/07/28 Visenri

    * sim/ucsim/pdk.src/inst.cc
    Fix bug in pdk15 simulation (introduced in [r12557]).
    
2021/07/28 Visenri

    * support/regression/compact-results.py
      Fix parsing of test name.

2021-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/abs.s,
	  device/lib/z80/divsigned.s,
	  device/lib/z80/divunsigned.s,
	  device/lib/z80/modsigned.s,
	  device/lib/z80/modunsigned.s,
	  doc/sdccman.lyx,
	  src/z80/gen.c
	  device/lib/z80/strcpy.s,
	  device/lib/z80/strlen.s,
	  device/lib/z80/atomic_flag_test_and_set.s,
	  device/lib/z80/mul.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80/memmove.s,
	  device/lib/z80/divmixed.s,
	  device/lib/z80/modmixed.s,
	  device/lib/z80/setjmp.s:
	  New calling convention for z80.

2021/07/27 Visenri

    * src/pdk/gen.c
      support/regression/tests/getbyte_param.c
      Fix bug #3269.
      Add test for it.

2021/07/26 Visenri

    * support/regression/Makefile.in
      support/regression/ports/pdk13
      support/regression/ports/pdk13/spec.mk
      support/regression/ports/pdk13/support.c
      support/regression/ports/pdk13/uCsim.cmd
      Added infrastructure to test pdk13.
      It is in the filter-out list to avoid automatic test, because many tests still need some work to be passed/skipped [#394].

2021/07/26 Visenri

    * support/regression/fwk/include/testfwk.h
      support/regression/fwk/lib/testfwk.c
      Lightweight version of test framework (testfwk) [#393].